[package]
name = "flowtigs"
version = "1.1.0"
edition = "2021"
description = "An algorithm for calculating flowtigs in a De Bruijn graph of DNA reads in metagenomes."
authors = ["Eliel Ingervo <eliel.ingervo@helsinki.fi>", "Sebastian Schmidt <isibboi@gmail.com>"]
repository = "https://github.com/elieling/flowtigs"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs = '0.0.5'
log = '0.4.19'
simple_logger = '2.0.0'
clap = { version = "4.3.4", features = ["derive"] }
simplelog = "0.12.1"
self-meter = "0.6.0"
genome-graph = "8.0.0"
anyhow = "1.0.71"

[[bin]]
name = "flowtigs"
path = "src/main.rs"
